# wgsl_to_wgpu

example/: Cargo.toml  build.rs
example/src/: shader.rs  shader.wgsl
