[package]
name = "example"
version = "0.3.1"
edition = "2021"

[dependencies]
winit = "0.27"
wgpu = "0.14.0"
futures = "0.3"
bytemuck = { version = "1.7", features = [ "derive" ] }
encase = { version = "0.4.1", features = ["nalgebra"] }
nalgebra = "0.32.1"

[build-dependencies]
wgsl_to_wgpu = { path = "../wgsl_to_wgpu" }
